--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 
 </table>
 <hr />
-<a href="contact.html">contact details</a>
+    <center>
+      <a href="contact.html">contact details</a>
+    </center>
+
 
   </body>
 </html>
